# svarog_service

./: Cargo.toml  Makefile  svarog.proto
svarog_grpc/src/: svarog.rs
svarog_peer/: Cargo.toml
svarog_peer/src/: btc.rs  lib.rs  server_main.rs  solana.rs
svarog_peer/src/_tests/: test_keygen_sign.rs
svarog_peer/src/server_impl/: biz.rs  conversion.rs  trait_facade.rs
svarog_ping/: Cargo.toml
svarog_ping/src/: main.rs
svarog_sesman/: Cargo.toml  build.rs
svarog_sesman/src/: client_lib.rs  server_impl.rs  server_main.rs
